Avoid flash of white when starting up with light mode and switching to dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,12 @@ body {
   margin: 0;
 }
 
+@media (prefers-color-scheme: dark) {
+  body {
+    color: black;
+  }
+}
+
 /* ------------------------- SelectList component styles ------------------------- */
 .selectlist-box {
   @apply m-2 flex flex-grow flex-col-reverse overflow-auto rounded border border-gray-400 p-1;
